--- a/settings.conf
+++ b/settings.conf
@@ -1,4 +1,8 @@
 mouse-1
 mouse-3
 grey
+../utils
+../labels
 # 3rd line should be a color, valid colors are white, black and grey, but others may work
+# the utils folder contains the images for the toolbar
+# the labels folder contains all the images for the classification labels per leaf trait / field
